[gd_scene load_steps=4 format=3 uid="uid://bk551kjsl443a"]

[ext_resource type="Script" path="res://menu stuff.gd" id="1_hw302"]
[ext_resource type="PackedScene" uid="uid://dh68jp0tubfnl" path="res://Scenes/kami_scenes/kami_upgrade_buttons.tscn" id="2_fo8ac"]
[ext_resource type="PackedScene" uid="uid://kaqe8d7np2rw" path="res://Scenes/kami_scenes/kami_upgrade_menu.tscn" id="3_ihdmo"]

[node name="menu stuff" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hw302")

[node name="upgrade_menu" parent="." instance=ExtResource("3_ihdmo")]
layout_mode = 1

[node name="upgrade_buttons" parent="." instance=ExtResource("2_fo8ac")]
layout_mode = 1
anchors_preset = 9
offset_left = 1.0
offset_top = 647.0
offset_right = 1.0
offset_bottom = 647.0
grow_horizontal = 1

[connection signal="closed" from="upgrade_menu" to="." method="_on_upgrade_menu_closed"]
[connection signal="opened" from="upgrade_menu" to="." method="_on_upgrade_menu_opened"]
